--- a/about.html
+++ b/about.html
@@ -13,7 +13,15 @@
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
-    <main></main>
+    <main  class="container">
+        <section class="container__conteudo">
+            <h1 class="container__conteudo__titulo">Sobre Mim</h1>
+            <p  class="container__conteudo__texto">Curabitur dignissim diam odio, et pretium tortor semper sed. Curabitur in maximus mauris, vitae rutrum lectus. Proin accumsan dictum quam vel tincidunt. Sed vel auctor ipsum, quis vestibulum mi. Donec vitae lobortis elit. Mauris nec dui eget tellus porta venenatis a ut enim. Suspendisse interdum odio ac justo maximus, scelerisque fringilla quam pulvinar. Maecenas non ex diam.</p>
+            <p class="container__conteudo__texto">Curabitur dignissim diam odio, et pretium tortor semper sed. Curabitur in maximus mauris, vitae rutrum lectus. Proin accumsan dictum quam vel tincidunt. Sed vel auctor ipsum, quis vestibulum mi. Donec vitae lobortis elit. Mauris nec dui eget tellus porta venenatis a ut enim. Suspendisse interdum odio ac justo maximus, scelerisque fringilla quam pulvinar. Maecenas non ex diam.</p>
+        </section>
+        <img src="/assets/uap.png" alt="UAPs" width="43%" class="uap">
+
+    </main>
     <footer class="rodape">Desenvolvido por Luan Pope de Araújo
         
     </footer>
