--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         Github</a>
                 </div>
         </section>
-            <img src="/assets/uap.png" alt="UAPs" width="43%" class="uap">
+            <img src="./assets/uap.png" alt="UAPs" width="43%" class="uap">
             
     </main>
     <footer class="rodape">Desenvolvido por Luan Pope de Araújo
